--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,1 +1,6 @@
+<div class="container">
+  <a routerLink="/login">Login</a>
+  <br />
+  <a routerLink="/register">Register</a>
+</div>
 <router-outlet></router-outlet>
