--- a/client/src/app/auth/components/login/login.component.html
+++ b/client/src/app/auth/components/login/login.component.html
@@ -7,7 +7,7 @@
     />
   </a>
   <div class="form-container">
-    <div class="login-header">Register to Trello</div>
+    <div class="login-header">Login to Trello</div>
     <div class="errors" *ngIf="errorMessage">{{ errorMessage }}</div>
     <form [formGroup]="form" (ngSubmit)="OnSubmit()">
       <input
@@ -17,20 +17,16 @@
         class="login-input"
       />
       <input
-        formControlName="username"
-        placeholder="Username"
-        class="login-input"
-      />
-      <input
         formControlName="password"
         type="password"
         placeholder="Password"
         class="login-input"
       />
-      <button type="submit" class="login-submit-button">Register</button>
+      <button type="submit" class="login-submit-button">Sign in</button>
     </form>
     <div class="bottom-form-links">
-      <a routerLink="/login" class="register-linkg">Sign in</a>
+      <!-- to see -->
+      <a routerLink="/login" class="login-linkg">Sign up for an account</a>
     </div>
   </div>
 </div>
