--- a/client/src/app/board/components/board/board.component.html
+++ b/client/src/app/board/components/board/board.component.html
@@ -5,6 +5,21 @@
   <div class="columns">
     <div class="column" *ngFor="let column of data.columns">
       <div class="column-title">{{ column.title }}</div>
+      <div
+        *ngFor="let task of getTasksByColumn(column.id, data.tasks)"
+        class="task"
+      >
+        {{ task.title }}
+      </div>
+      <el-inline-form
+        class="create-task-form"
+        defaultText="Add a task"
+        [hasButton]="true"
+        buttonText="Add task"
+        inputPlaceholder=" Add task name"
+        (handleSubmit)="createTask($event, column.id)"
+      >
+      </el-inline-form>
     </div>
     <el-inline-form
       class="create-column-form"
