--- a/client/src/app/board/components/board/board.component.html
+++ b/client/src/app/board/components/board/board.component.html
@@ -1,7 +1,15 @@
 <el-top-bar></el-top-bar>
 
 <div class="board" *ngIf="data$ | async as data">
-  <div class="board-header-container">INLINE FORM BOARD</div>
+  <div class="board-header-container">
+    <el-inline-form
+      class="edit-board-form"
+      defaultText="{{ data.board.title }}"
+      [title]="data.board.title"
+      (handleSubmit)="updateBoardName($event)"
+    >
+    </el-inline-form>
+  </div>
   <div class="columns">
     <div class="column" *ngFor="let column of data.columns">
       <div class="column-title">{{ column.title }}</div>
