--- a/client/src/app/board/components/board/board.component.html
+++ b/client/src/app/board/components/board/board.component.html
@@ -9,6 +9,7 @@
       (handleSubmit)="updateBoardName($event)"
     >
     </el-inline-form>
+    <div class="delete-board" (click)="deleteBoard()">Delete board</div>
   </div>
   <div class="columns">
     <div class="column" *ngFor="let column of data.columns">
