--- a/client/src/app/board/components/board/board.component.html
+++ b/client/src/app/board/components/board/board.component.html
@@ -13,7 +13,20 @@
   </div>
   <div class="columns">
     <div class="column" *ngFor="let column of data.columns">
-      <div class="column-title">{{ column.title }}</div>
+      <div class="column-title">
+        <el-inline-form
+          class="edit-column-form"
+          defaultText="{{ column.title }}"
+          [title]="column.title"
+          (handleSubmit)="updateColumnName($event, column.id)"
+        >
+        </el-inline-form>
+        <img
+          src="/assets/close_icon.svg"
+          class="column-delete-icon"
+          (click)="deleteColumn(column.id)"
+        />
+      </div>
       <div
         *ngFor="let task of getTasksByColumn(column.id, data.tasks)"
         class="task"
