--- a/client/src/app/board/components/board/board.component.html
+++ b/client/src/app/board/components/board/board.component.html
@@ -4,11 +4,10 @@
   <div class="board-header-container">
     <el-inline-form
       class="edit-board-form"
-      defaultText="{{ data.board.title }}"
+      [defaultText]="data.board.title"
       [title]="data.board.title"
       (handleSubmit)="updateBoardName($event)"
-    >
-    </el-inline-form>
+    ></el-inline-form>
     <div class="delete-board" (click)="deleteBoard()">Delete board</div>
   </div>
   <div class="columns">
@@ -16,11 +15,10 @@
       <div class="column-title">
         <el-inline-form
           class="edit-column-form"
-          defaultText="{{ column.title }}"
+          [defaultText]="column.title"
           [title]="column.title"
           (handleSubmit)="updateColumnName($event, column.id)"
-        >
-        </el-inline-form>
+        ></el-inline-form>
         <img
           src="/assets/close_icon.svg"
           class="column-delete-icon"
@@ -35,22 +33,20 @@
       </div>
       <el-inline-form
         class="create-task-form"
-        defaultText="Add a task"
+        defaultText="Add a card"
         [hasButton]="true"
-        buttonText="Add task"
-        inputPlaceholder=" Add task name"
+        buttonText="Add card"
+        inputPlaceholder="Enter a title for this card"
         (handleSubmit)="createTask($event, column.id)"
-      >
-      </el-inline-form>
+      ></el-inline-form>
     </div>
     <el-inline-form
       class="create-column-form"
       defaultText="Add a list"
       [hasButton]="true"
       buttonText="Add list"
-      inputPlaceholder=" Add column name"
+      inputPlaceholder="Add column name"
       (handleSubmit)="createColumn($event)"
-    >
-    </el-inline-form>
+    ></el-inline-form>
   </div>
 </div>
