Get task and columns
Add inline form => title / description + get task/column in modal

--- a/client/src/app/board/components/taskModal/taskModal.componen.html
+++ b/client/src/app/board/components/taskModal/taskModal.componen.html
@@ -1,6 +1,12 @@
-<div class="task-modal-container">
+<div class="task-modal-container" *ngIf="data$  | async as data">
   <div class="task-modal-header">
-    TASK TITLE INLINE FORM
+    <el-inline-form
+      class="task-modal-edit-title-form"
+      [defaultText]="data.task.title"
+      [title]="data.task.title"
+      (handleSubmit)="updateTaskName($event)"
+    >
+    </el-inline-form>
     <img
       src="/assets/close_icon.svg"
       class="task-modal-close"
@@ -9,10 +15,25 @@
   </div>
   <div class="task-modal-body">
     <div>
-      <form class="column-select-container">SELECT COLUMN</form>
+      <form [formGroup]="columnForm" class="column-select-container">
+        <select formControlName="columnId" class="column-select">
+          <option *ngFor="let column of data.columns" [ngValue]="column.id">
+            {{ column.title}}
+          </option>
+        </select>
+      </form>
       <div class="task-modal-description">
         <div class="task-modal-description-label">Description</div>
-        INLINE FORM DESCRIPTION
+        <el-inline-form
+          class="task-modal-edit-description-form"
+          [defaultText]="data.task.description || 'Add more detailed description'"
+          [title]="data.task.description || ''"
+          inputType="textarea"
+          [hasButton]="true"
+          buttonText="Save"
+          (handleSubmit)="updateTaskDescription($event)"
+        >
+        </el-inline-form>
       </div>
     </div>
     <div class="task-modal-actions">
