--- a/client/src/app/board/components/taskModal/taskModal.componen.html
+++ b/client/src/app/board/components/taskModal/taskModal.componen.html
@@ -38,10 +38,11 @@
     </div>
     <div class="task-modal-actions">
       <div class="task-modal-actions-label">
-        task-modal-actions
+        Actions
         <div>
-          <div class="task-modal-actions-action">
+          <div class="task-modal-actions-action" (click)="deleteTask()">
             <img src="/assets/trash.svg" class="task-modal-actions-icon" />
+            Delete
           </div>
         </div>
       </div>
